@@ -1,2 +1,0 @@
-FILE_TYPE +=  EDL
-INSTALL_EDL = $(INSTALL_LOCATION)/display
