@@ -1,2 +1,0 @@
-FILE_TYPE+=PROTO
-INSTALL_PROTO += $(INSTALL_LOCATION)/db
