@@ -1,7 +1,4 @@
 
-# EPICS Templates
-TEMPLATE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1/modules/icdTemplates/icdTemplates-R1-2-2
-
 -include $(TOP)/RELEASE_SITE
 
 # ==========================================================
@@ -14,11 +11,11 @@ TEMPLATE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1/modules/icdTemplates/icdTempl
 # ==========================================================
 
 ASYN_MODULE_VERSION=R4.32-1.0.0
-AUTOSAVE_MODULE_VERSION=R5.8-2.1.0
-CAPUTLOG_MODULE_VERSION=R3.5-1.0.0
-IOCADMIN_MODULE_VERSION=R3.1.15-1.7.0
 MODBUS_MODULE_VERSION=R2.11-1.0.0
-SEQ_MODULE_VERSION=R2.2.4-1.1
+SEQ_MODULE_VERSION=R2.2.4-1.2
+AUTOSAVE_MODULE_VERSION=R5.10-1.0.0
+CAPUTLOG_MODULE_VERSION=R3.7-1.0.0
+IOCADMIN_MODULE_VERSION=R3.1.16-1.3.0
 
 # ==========================================================
 # Define module paths using pattern
@@ -28,11 +25,11 @@ SEQ_MODULE_VERSION=R2.2.4-1.1
 # ==========================================================
 
 ASYN=$(EPICS_MODULES)/asyn/$(ASYN_MODULE_VERSION)
+MODBUS=$(EPICS_MODULES)/modbus/$(MODBUS_MODULE_VERSION)
+SNCSEQ=$(EPICS_MODULES)/seq/$(SEQ_MODULE_VERSION)
 AUTOSAVE=$(EPICS_MODULES)/autosave/$(AUTOSAVE_MODULE_VERSION)
 CAPUTLOG=$(EPICS_MODULES)/caPutLog/$(CAPUTLOG_MODULE_VERSION)
 IOCADMIN=$(EPICS_MODULES)/iocAdmin/$(IOCADMIN_MODULE_VERSION)
-MODBUS=$(EPICS_MODULES)/modbus/$(MODBUS_MODULE_VERSION)
-SNCSEQ=$(EPICS_MODULES)/seq/$(SEQ_MODULE_VERSION)
 
 # =====================================================================
 # Set EPICS_BASE last so it appears last in the DB, DBD, INCLUDE, and LIB search paths
