@@ -16,21 +16,25 @@ DBD += $(PROD_NAME).dbd
 
 # $(PROD_NAME).dbd will be made up from these files:
 $(PROD_NAME)_DBD += base.dbd
+$(PROD_NAME)_DBD += asyn.dbd
+$(PROD_NAME)_DBD += drvAsynIPPort.dbd
+$(PROD_NAME)_DBD += modbusSupport.dbd
 $(PROD_NAME)_DBD += devIocStats.dbd
 $(PROD_NAME)_DBD += asSupport.dbd
 $(PROD_NAME)_DBD += caPutLog.dbd
+$(PROD_NAME)_DBD += system.dbd
+
 $(PROD_NAME)_DBD += $(PROD_NAME)ASubSupport.dbd
 $(PROD_NAME)_DBD += $(PROD_NAME)SeqSupport.dbd
 
-$(PROD_NAME)_DBD += system.dbd
+ifdef EPICS_QSRV_MAJOR_VERSION
+$(PROD_NAME)_DBD += PVAServerRegister.dbd
+$(PROD_NAME)_DBD += qsrv.dbd
+endif
 
 # If you don't have an EVR comment the following two lines:
 #$(PROD_NAME)_DBD += evrSupport.dbd
 #$(PROD_NAME)_DBD += devMrfEr.dbd
-
-$(PROD_NAME)_DBD += asyn.dbd
-$(PROD_NAME)_DBD += drvAsynIPPort.dbd
-$(PROD_NAME)_DBD += modbusSupport.dbd
 
 # Breakpoint tables for power conversion
 $(PROD_NAME)_DBD += bptSsaPwrFwd.dbd
@@ -40,7 +44,6 @@ $(PROD_NAME)_DBD += bptSsaPwrDrv.dbd
 # ======================================================================
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
 $(PROD_NAME)_SRCS += $(PROD_NAME)_registerRecordDeviceDriver.cpp
-
 $(PROD_NAME)_SRCS_DEFAULT += $(PROD_NAME)Main.cpp
 
 # ========================================================================
@@ -55,18 +58,16 @@ $(PROD_NAME)_SRCS += $(PROD_NAME)Seq_RK_CA3900.st
 # =====================================================
 # Link in the code from other libraries
 # =====================================================
-# Needed to link in iocAdmin support
 $(PROD_NAME)_LIBS += devIocStats
-
-# Needed to link in autosave support
 $(PROD_NAME)_LIBS += autosave
-
-# Needed to link caPutLog support
 $(PROD_NAME)_LIBS += caPutLog
-
 $(PROD_NAME)_LIBS += modbus
 $(PROD_NAME)_LIBS += asyn
 
+ifdef EPICS_QSRV_MAJOR_VERSION
+$(PROD_NAME)_LIBS += qsrv
+$(PROD_NAME)_LIBS += $(EPICS_BASE_PVA_CORE_LIBS)
+endif
 
 # NOTE: To build SNL programs, SNCSEQ must be defined
 # in the <top>/configure/RELEASE file
